--- a/koha-tmpl/intranet-tmpl/prog/en/catalogue/ISBDdetail.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/catalogue/ISBDdetail.tmpl
@@ -43,7 +43,7 @@
 			<input type="submit" value="Print" />
 		</form>
 		<!-- TMPL_IF name="subscriptionsnumber" -->
-		<form action="bull-home.pl?biblionumber=<!-- TMPL_VAR NAME="biblionumber" -->">
+		<form action="serials-home.pl?biblionumber=<!-- TMPL_VAR NAME="biblionumber" -->">
 			<input type="submit" value="Subscription(s)" />
 		</form>
 		<!-- /TMPL_IF -->
