--- a/koha-tmpl/intranet-tmpl/prog/en/acqui/recieveorder.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/acqui/recieveorder.tmpl
@@ -5,7 +5,7 @@
 <h1>Receive Orders From Supplier <a href="/cgi-bin/koha/acqui/supplier.pl?supplierid=<!-- TMPL_VAR NAME="supplierid" -->"><!-- TMPL_VAR NAME="name" --></a></h1>
 <div id="acqui_recieveorder">
 	<h2 class="acquisition">Supplier invoice information</h2>
-	<form method="get" action="receive.pl">
+	<form method="get" action="parcel.pl">
 		<input type="hidden" name="supplierid" value=<!-- TMPL_VAR NAME="supplierid" -->>
 		<p>
 			<label>Supplier Invoice Number</label>
