--- a/koha-tmpl/intranet-tmpl/prog/en/acqui/acquire.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/acqui/acquire.tmpl
@@ -86,7 +86,7 @@
 		<tr>
 			<td><!-- TMPL_VAR NAME="basketno" --></td>
 			<td><!-- TMPL_VAR NAME="isbn" --></td>
-			<td><a href="acquire.pl?recieve=<!-- TMPL_VAR NAME="ordernumber" -->&amp;biblio=<!-- TMPL_VAR NAME="biblionumber" -->&amp;invoice=<!-- TMPL_VAR NAME="invoice" -->&amp;freight=<!-- TMPL_VAR NAME="freight" -->&amp;gst=<!-- TMPL_VAR NAME="gst" -->&amp;id=<!-- TMPL_VAR NAME="id" -->"><!-- TMPL_VAR NAME="title" --></a></td>
+         <td><a href="orderreceive.pl?recieve=<!-- TMPL_VAR NAME="ordernumber" -->&amp;biblio=<!-- TMPL_VAR NAME="biblionumber" -->&amp;invoice=<!-- TMPL_VAR NAME="invoice" -->&amp;freight=<!-- TMPL_VAR NAME="freight" -->&amp;gst=<!-- TMPL_VAR NAME="gst" -->&amp;id=<!-- TMPL_VAR NAME="id" -->"><!-- TMPL_VAR NAME="title" --></a></td>
 			<td><!-- TMPL_VAR NAME="author" --></td>
 			<td><!-- TMPL_VAR NAME="quantity" --></td>
 			<td><!-- TMPL_VAR NAME="quantityrecieved" --></td>
