fix broken link.

--- a/koha-tmpl/intranet-tmpl/prog/en/acqui/order.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/acqui/order.tmpl
@@ -22,7 +22,7 @@
 				<!-- /TMPL_IF -->
 			</td>
 			<td>
-				<a href="recieveorder.pl?supplierid=<!-- TMPL_VAR name=supplierid -->">Recieve order</a>
+				<a href="parcels.pl?supplierid=<!-- TMPL_VAR name=supplierid -->">Recieve order</a>
 			</td>
 			<td><a href="supplier.pl?supplierid=<!-- TMPL_VAR name=supplierid -->"><!-- TMPL_VAR name="name" --></a></td>
 			<td>
