updating link from /bull/ to serials

--- a/koha-tmpl/intranet-tmpl/prog/en/serials/member-search.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/serials/member-search.tmpl
@@ -11,10 +11,10 @@ function add_member(subscriptionid,bornum){
 </script>
 
 <div class="popup-block">
-<h1 class="bull">Member Search</h1>
+<h1>Member Search</h1>
 
 <p>
-<form name="search" action="/cgi-bin/koha/bull/member-search.pl" method="post">
+<form name="search" action="/cgi-bin/koha/serials/member-search.pl" method="post">
 <input type="text" name="member" size="30" />
 <input type="hidden" name="subscriptionid" value="<!-- TMPL_VAR NAME="subscriptionid" -->">
 <input type="submit" class="button" value="Search" />
