--- a/koha-tmpl/intranet-tmpl/prog/en/serials/member-search.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/serials/member-search.tmpl
@@ -28,7 +28,8 @@ function add_member(subscriptionid,bornum){
 <!-- TMPL_LOOP NAME="memberloop" -->
 <tr><td class="cell"><!-- TMPL_VAR NAME="firstname" --> <!-- TMPL_VAR NAME="surname" --></td>
     <td class="cell"><!-- TMPL_VAR NAME="streetaddress" --></td>
-    <td class="cell"><a onclick="add_member(<!-- TMPL_VAR NAME="subscriptionid" -->,<!-- TMPL_VAR NAME="borrowernumber" -->); return false" href="/cgi-bin/koha/bull/routing.pl?subscriptionid=<!-- TMPL_VAR NAME="subscriptionid" -->&amp;bornum=<!-- TMPL_VAR NAME="borrowernumber" -->&amp;op=add">Add</a></td></tr>
+    <td class="cell"><a onclick="add_member(<!-- TMPL_VAR
+NAME="subscriptionid" -->,<!-- TMPL_VAR NAME="borrowernumber" -->); return false" href="/cgi-bin/koha/serials/routing.pl?subscriptionid=<!-- TMPL_VAR NAME="subscriptionid" -->&amp;bornum=<!-- TMPL_VAR NAME="borrowernumber" -->&amp;op=add">Add</a></td></tr>
 <!-- /TMPL_LOOP -->
         </table></td></tr>
 </table>
