--- a/koha-tmpl/intranet-tmpl/prog/en/serials/routing-preview.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/serials/routing-preview.tmpl
@@ -1,4 +1,8 @@
-<!-- TMPL_INCLUDE NAME="bull-top.inc" -->
+<!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->Koha -- Subscription edit<!--
+TMPL_INCLUDE NAME="doc-head-close.inc" -->
+
+<!-- TMPL_INCLUDE NAME="menus.inc" -->
+<!--TMPL_INCLUDE NAME="menu-serials.inc" -->
 
 <div id="mainbloc">
 <h1 class="bull">Preview Routing List</h1>
@@ -39,4 +43,4 @@ window.open(myurl,'PrintSlip','width=400,height=500,toolbar=no,scrollbars=yes');
 }
 //-->
 </script>
-<!-- TMPL_INCLUDE NAME="bull-bottom.inc" -->
+<!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
