added ability for the popup to close and the opening page to refresh once subscription is renewed

--- a/koha-tmpl/intranet-tmpl/prog/en/serials/subscription-renew.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/serials/subscription-renew.tmpl
@@ -18,5 +18,15 @@
 	</div>
 </form>
 </div>
+
+        <!-- TMPL_IF NAME="done" -->
+	<script type="text/javascript">
+	<!--
+	opener.document.location.reload();
+	self.close();
+	//-->
+	</script>
+	<!-- /TMPL_IF -->
+
 <!-- TMPL_INCLUDE NAME="popup-bottom.inc" -->
 
