fix broken link.

--- a/koha-tmpl/intranet-tmpl/prog/en/acqui/newbasket2.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/acqui/newbasket2.tmpl
@@ -39,7 +39,7 @@
 				</a>
 			</td>
 			<td>
-				<a href="/cgi-bin/koha/search.pl?author=<!-- TMPL_VAR name="word" -->&amp;type=<!-- TMPL_VAR name="type" -->">
+				<a href="/cgi-bin/koha/search.marc/search.pl?author=<!-- TMPL_VAR name="word" -->&amp;type=<!-- TMPL_VAR name="type" -->">
 				<!-- TMPL_VAR name="author" -->
 				</a>
 			</td>
