--- a/koha-tmpl/intranet-tmpl/prog/en/acqui/basket.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/acqui/basket.tmpl
@@ -16,8 +16,7 @@
 		</table>
 		<!-- TMPL_UNLESS name="closedate" -->
 		<form action="/cgi-bin/koha/acqui/order.pl" method="get">
-			<input type="hidden" name="op" value="close" />
-			<input type="hidden" name="basket" value="<!-- TMPL_VAR NAME="basketno" -->" />
+			<input type="hidden" name="basketno" value="<!-- TMPL_VAR NAME="basketno" -->" />
 			<input type="hidden" name="supplier" value="<!-- TMPL_VAR name="booksellerid" -->" />
 			<input type="submit" value="Close this Basket" />
 		</form>
@@ -30,13 +29,13 @@
 		<table>
 			<tr>
 				<th scope="col">Order</th>
-				<th scope="col"><a href="basket.pl?basket=<!-- TMPL_VAR name="basketno" -->&amp;order=biblioitems.publishercode">Publisher</a></th>
+				<th scope="col"><a href="basket.pl?basketno=<!-- TMPL_VAR name="basketno" -->&amp;order=biblioitems.publishercode">Publisher</a></th>
 				<th scope="col">Title</th>
 				<th scope="col">RRP</th>
 				<th scope="col">Est.</th>
 				<th scope="col">Qty.</th>
 				<th scope="col">Total</th>
-				<th scope="col"><a href="basket.pl?basket=<!-- TMPL_VAR name="basketno" -->&amp;order=aqorderbreakdown.bookfundid,biblioitems.publishercode">Fund</a></th>
+				<th scope="col"><a href="basket.pl?basketno=<!-- TMPL_VAR name="basketno" -->&amp;order=aqorderbreakdown.bookfundid,biblioitems.publishercode">Fund</a></th>
 <!-- TMPL_IF name="active" -->
 <!-- TMPL_UNLESS name="closedate" -->
 					<th scope="col">Remove</th>
