list of pending/receive records added.

--- a/koha-tmpl/intranet-tmpl/prog/en/acqui/parcels.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/acqui/parcels.tmpl
@@ -2,26 +2,125 @@
 <!-- TMPL_INCLUDE NAME="menus.inc" -->
 <!-- TMPL_INCLUDE NAME="menu-acqui.inc" -->
 
-<h1>Receive Orders From Supplier <a href="/cgi-bin/koha/acqui/supplier.pl?supplierid=<!-- TMPL_VAR NAME="supplierid" -->"><!-- TMPL_VAR NAME="name" --></a></h1>
-<div id="acqui_recieveorder">
-    <h2 class="acquisition">Supplier invoice information</h2>
-    <form method="get" action="parcel.pl">
-        <input type="hidden" name="supplierid" value=<!-- TMPL_VAR NAME="supplierid" -->>
-        <p>
-            <label>Supplier Invoice Number</label>
-            <input type="text" size="20" name="invoice">
-        </p>
-        <p>
-            <label>GST</label>
-            <input type="text" size="20" name="gst">
-        </p>
-        <p>
-            <label>Freight</label>
-            <input type="text" size="20" name="freight">
-        </p>
-        <p>
-            <input type="submit" class="button acquisition" value="save">
-        </p>
-    </form>
+<h1 class="acquisition">Receive parcel from supplier <a href="/cgi-bin/koha/acqui/supplier.pl?supplierid=<!-- TMPL_VAR NAME="supplierid" -->"><!-- TMPL_VAR NAME="name" --></a></h1>
+
+<!-- TMPL_IF NAME="count" --><p> <!-- TMPL_VAR NAME="count" --> parcels found</p><!--/TMPL_IF-->
+<div id="resultnumber">
+<!-- Row of numbers corresponding to search result pages -->
+<!-- TMPL_IF NAME="displayprev" -->
+	<a href="parcels.pl?supplierid=<!-- TMPL_VAR NAME="supplierid" -->&amp;startfrom=<!-- TMPL_VAR NAME="prevstartfrom" --><!--TMPL_IF Name="datefrom"-->&amp;datefrom=<!--TMPL_VAR Name="datefrom"--><!--/TMPL_IF--><!--TMPL_IF Name="dateto"-->&amp;dateto=<!--TMPL_VAR Name="dateto"--><!--/TMPL_IF--><!--TMPL_IF Name="code"-->&amp;filter=<!--TMPL_VAR Name="code"--><!--/TMPL_IF--><!--TMPL_IF Name="orderby"-->&amp;orderby=<!--TMPL_VAR Name="orderby"--><!--/TMPL_IF--><!--TMPL_IF Name="resultsperpage"-->&amp;resultsperpage=<!--TMPL_VAR Name="resultsperpage"--><!--/TMPL_IF-->&amp;type=intra"><img src="<!-- TMPL_VAR NAME="themelang" -->/images/numbers/prev.gif" border="0"></a>
+<!-- TMPL_ELSE -->
+	<img src="<!-- TMPL_VAR NAME="themelang" -->/images/numbers/placeholder.gif" border="0">
+<!-- /TMPL_IF -->
+<!-- TMPL_LOOP NAME="numbers" -->
+	<!-- TMPL_IF NAME="highlight" -->
+	<img src="<!-- TMPL_VAR NAME="themelang" -->/images/numbers/<!-- TMPL_VAR NAME="number" -->-highlight.gif">
+	<!-- TMPL_ELSE -->
+	<a href="parcels.pl?supplierid=<!-- TMPL_VAR NAME="supplierid" -->&amp;startfrom=<!-- TMPL_VAR NAME="startfrom" --><!--TMPL_IF Name="datefrom"-->&amp;datefrom=<!--TMPL_VAR Name="datefrom"--><!--/TMPL_IF--><!--TMPL_IF Name="dateto"-->&amp;dateto=<!--TMPL_VAR Name="dateto"--><!--/TMPL_IF--><!--TMPL_IF Name="code"-->&amp;filter=<!--TMPL_VAR Name="code"--><!--/TMPL_IF--><!--TMPL_IF Name="orderby"-->&amp;orderby=<!--TMPL_VAR Name="orderby"--><!--/TMPL_IF--><!--TMPL_IF Name="resultsperpage"-->&amp;resultsperpage=<!--TMPL_VAR Name="resultsperpage"--><!--/TMPL_IF-->&amp;type=intra"><img src="<!-- TMPL_VAR NAME="themelang" -->/images/numbers/<!-- TMPL_VAR NAME="number" -->.gif" border="0"></a>
+	<!-- /TMPL_IF -->
+<!-- /TMPL_LOOP -->
+<!-- TMPL_IF NAME="displaynext" -->
+	<a href="parcels.pl?supplierid=<!-- TMPL_VAR NAME="supplierid" -->&amp;startfrom=<!-- TMPL_VAR NAME="nextstartfrom" --><!--TMPL_IF Name="datefrom"-->&amp;datefrom=<!--TMPL_VAR Name="datefrom"--><!--/TMPL_IF--><!--TMPL_IF Name="dateto"-->&amp;dateto=<!--TMPL_VAR Name="dateto"--><!--/TMPL_IF--><!--TMPL_IF Name="code"-->&amp;filter=<!--TMPL_VAR Name="code"--><!--/TMPL_IF--><!--TMPL_IF Name="orderby"-->&amp;orderby=<!--TMPL_VAR Name="orderby"--><!--/TMPL_IF--><!--TMPL_IF Name="resultsperpage"-->&amp;resultsperpage=<!--TMPL_VAR Name="resultsperpage"--><!--/TMPL_IF-->&amp;type=intra"><img src="<!-- TMPL_VAR NAME="themelang" -->/images/numbers/next.gif" border="0"></a>
+<!-- TMPL_ELSE -->
+	<img src="<!-- TMPL_VAR NAME="themelang" -->/images/numbers/placeholder.gif" border="0">
+<!-- /TMPL_IF -->
 </div>
+
+<div id="resultlist">
+<!-- Search Results Table -->
+<!-- TMPL_IF NAME="count" -->
+<form method="post" action="parcels.pl">
+	<table class="small">
+		<tr>
+			<th class="acquisition">Line</th>
+			<th class="acquisition">Code</th>
+			<th class="acquisition">Date Received</th>
+			<th class="acquisition">Item Count</th>
+			<th class="acquisition">Biblio count</th>
+			<th class="acquisition">Items expected</th>
+		</tr>
+		<tr>
+			<th class="acquisition">
+				&nbsp;
+				<input type="hidden" name="supplierid" value=<!-- TMPL_VAR NAME="supplierid" -->>
+			</th>
+			<th class="acquisition">
+				<input type="text" size="20" name="filter" value="<!-- TMPL_VAR NAME="filter" -->">
+			</th>
+			<th class="acquisition">
+				From :<input type="text" size="9" name="datefrom" value="<!-- TMPL_VAR NAME="datefrom" -->"> 
+				<p>To :<input type="text" size="9" name="dateto" value="<!-- TMPL_VAR NAME="dateto" -->">
+			</th>
+			<th class="acquisition">
+				&nbsp;
+			</th>
+			<th class="acquisition">
+				Sort by :<select name="orderby" size="1">
+				<option value="aqorders.booksellerinvoicenumber"> Code</option>
+				<option value="datereceived"> Date Received</option>
+				<option value="datereceived desc"> Date Received reverse</option>
+				<option value="aqorders.booksellerinvoicenumber desc"> Code reverse</option>
+				</select><br />
+				Results per page :<select name="resultsperpage" value ="<!--TMPL_VAR Name="resultsperpage"-->" size="1">
+				<option value="20">20</option>
+				<option value="30">30</option>
+				<option value="50">50</option>
+				<option value="100">100</option>
+				</select>
+			</th>
+			<th class="acquisition">
+				<input type="submit" class="button acquisition" value="Filter">
+			</th>
+		</tr>
+<!-- Actual Search Results -->
+<!-- TMPL_LOOP NAME="searchresults" -->
+	<tr>
+		<!-- TMPL_IF NAME="hilighted" --><td class="hilighted"><!-- TMPL_ELSE --><td><!-- /TMPL_IF -->
+			<!-- TMPL_VAR NAME="number" -->
+		</td>
+		<!-- TMPL_IF NAME="hilighted" --><td class="hilighted number"><!-- TMPL_ELSE --><td class="number"><!-- /TMPL_IF -->
+			<!--TMPL_IF Name="code"--><!--TMPL_VAR Name="code" --><!--/TMPL_IF-->
+		</td>
+		<!-- TMPL_IF NAME="hilighted" --><td class="hilighted number"><!-- TMPL_ELSE --><td class="number">
+		<!-- /TMPL_IF -->
+			<a href="/cgi-bin/koha/acqui/parcel.pl?type=intra&amp;supplierid=<!-- TMPL_VAR NAME="supplierid" ESCAPE=URL -->&amp;datereceived=<!-- TMPL_VAR NAME="raw_datereceived" ESCAPE=URL --><!--TMPL_IF Name="code"-->&amp;code=<!--TMPL_VAR Name="code" ESCAPE=URL --><!--/TMPL_IF-->">
+				<!-- TMPL_VAR NAME="datereceived" -->
+			</a>
+		</td>
+		<!-- TMPL_IF NAME="hilighted" --><td class="hilighted number"><!-- TMPL_ELSE --><td class="number">
+		<!-- /TMPL_IF -->
+			<!-- TMPL_VAR NAME="reccount" --> 
+		</td>
+		<!-- TMPL_IF NAME="hilighted" --><td class="hilighted number"><!-- TMPL_ELSE --><td class="number"><!-- /TMPL_IF -->
+			<!-- TMPL_VAR NAME="bibcount" -->
+		</td>
+		<!-- TMPL_IF NAME="hilighted" --><td class="hilighted number"><!-- TMPL_ELSE --><td class="number"><!-- /TMPL_IF -->
+			<!-- TMPL_VAR NAME="itemcount" -->
+		</td>
+	</tr>
+<!-- /TMPL_LOOP -->
+</table>
+</form>
+<!--/TMPL_IF-->
+	<div id="bloc25">
+	<h2 class="acquisition"> Receive a new Parcel </h2>
+		<form method="get" action="parcel.pl">
+		<p>
+			<input type="hidden" name="supplierid" value=<!-- TMPL_VAR NAME="supplierid" -->>
+			<label>Parcel Code</label>
+			<input type="text" size="20" name="invoice">
+		</p>
+		<p>
+			<label>GST</label>
+			<input type="text" size="20" name="gst">
+		</p>
+		<p>
+			<label>Freight</label>
+			<input type="text" size="20" name="freight">
+		</p>
+		<p>
+			<input type="submit" class="button acquisition" value="save">
+		</p>
+		</form>
+	</div>
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
