updating a little the templates (main menu on the left). Another commit will come very soon to validate the proof of concept of "includes" directory as having an easy personalized librarian (or OPAC) interface.

--- a/koha-tmpl/intranet-tmpl/prog/en/includes/intranet.css
+++ b/koha-tmpl/intranet-tmpl/prog/en/includes/intranet.css
@@ -93,3 +93,46 @@ legend {
 
 /* end of css styles for reserves color alerts */
 
+/* MAIN MENU STYLES */
+#mainmenu {
+    display:block;
+    float:left;
+    margin-right:20px;
+    border-right:1px solid black;
+}
+
+#mainmenu a {
+    display:block;
+    margin:5px;
+    text-decoration:none;
+    color:black;
+}
+#mainmenu a:hover {
+    display:block;
+    margin:5px;
+    background-color:#6699cc;
+    color:white;
+}
+
+/* submenus styles */
+#submenu {
+    margin-left:10%;
+}
+#submenu a {
+    margin:5px;
+    text-decoration:none;
+    color:black;
+}
+#submenu a:hover {
+    margin:5px;
+    background-color:#6699cc;
+    color:white;
+}
+
+/* the USER information block */
+#librarian_information {
+/*     position:absolute; */
+    float:right;
+    font-size:10pt;
+}
+
