adding menu-tools item

--- a/koha-tmpl/intranet-tmpl/prog/en/tools/letter.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/tools/letter.tmpl
@@ -2,7 +2,7 @@
 	Letters admin
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 <!-- TMPL_INCLUDE NAME="menus.inc" -->
-<!-- TMPL_INCLUDE NAME="menu-admin.inc" -->
+<!-- TMPL_INCLUDE NAME="menu-tools.inc" -->
 
 	<!-- TMPL_IF NAME="else" -->
 		<form action="/cgi-bin/koha/tools/letter.pl" method="post">
