add value for formfieldlist in all template ( A,C,P and I)

--- a/koha-tmpl/intranet-tmpl/prog/en/members/memberentryA.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/members/memberentryA.tmpl
@@ -52,7 +52,7 @@
 <form name="form"  action="/cgi-bin/koha/members/memberentry.pl" method="post"> 
 <!-- 		field always hidden in different form (1,2,3) -->
 	<input type="hidden" name="BorrowerMandatoryfield" value="<!--TMPL_VAR NAME="BorrowerMandatoryfield"-->">
-	<input type="hidden" name="FormFieldList" value="surname|cardnumber|firstname|dateofbirth|sort1|sort2">
+	<input type="hidden" name="FormFieldList" value="surname|select_city|othernames|initials|title|cardnumber|firstname|dateofbirth|sort1|sort2">
 	<input type="hidden" name="category_type" value="<!-- TMPL_VAR name="category_type" -->">
 	<input type="hidden" name="type" value="borrowers">
 	<input type="hidden" name="step" value="<!-- TMPL_VAR NAME="step" -->">
@@ -235,7 +235,7 @@
 <form name="form" action="/cgi-bin/koha/members/memberentry.pl" method="post">
 	<!-- 		field always hidden in different form (1,2,3) -->
 	<input type="hidden" name="BorrowerMandatoryfield" value="<!--TMPL_VAR NAME="BorrowerMandatoryfield"-->">
-	<input type="hidden" name="FormFieldList" value="address|zipcode|city|phone|phonepro|mobile|email|emailpro|">
+	<input type="hidden" name="FormFieldList" value="cardnumber|streetnumber|streettype|address|address2|zipcode|city|B_address|B_zipcode|B_city|phone|phonepro|mobile|email|emailpro|fax">
 	<input type="hidden" name="category_type" value="<!-- TMPL_VAR name="category_type" -->">
 	<input type="hidden" name="type" value="borrowers">
 	<input type="hidden" name="step" value="<!-- TMPL_VAR NAME="step" -->">
@@ -461,7 +461,7 @@
 <form name="form" action="/cgi-bin/koha/members/memberentry.pl" method="post">
 	<!-- 		field always hidden in different form (1,2,3) -->
 	<input type="hidden" name="BorrowerMandatoryfield" value="<!--TMPL_VAR NAME="BorrowerMandatoryfield"-->">
-	<input type="hidden" name="FormFieldList" value="">
+	<input type="hidden" name="FormFieldList" value="cardnumber|dateenrolled|dateexpiry|opacnote|borrowernotes|userid|password">
 	<input type="hidden" name="category_type" value="<!-- TMPL_VAR name="category_type" -->">
 	<input type="hidden" name="type" value="borrowers">
 	<input type="hidden" name="step" value="<!-- TMPL_VAR NAME="step" -->">
