--- a/koha-tmpl/intranet-tmpl/prog/en/members/memberentryP.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/members/memberentryP.tmpl
@@ -48,7 +48,7 @@
 <form name="form"  action="/cgi-bin/koha/members/memberentry.pl" method="post"> 
 		<!-- 		field always hidden in different form (1,2,3) -->
 		<input type="hidden" name="BorrowerMandatoryfield" value="<!--TMPL_VAR NAME="BorrowerMandatoryfield"-->">
-		<input type="hidden" name="FormFieldList" value="">
+		<input type="hidden" name="FormFieldList" value="surname|select_city|othernames|initials|title|cardnumber|firstname|dateofbirth|sort1|sort2">
 		<input type="hidden" name="category_type" value="<!-- TMPL_VAR name="category_type" -->">
 		<input type="hidden" name="type" value="borrowers">
 		<input type="hidden" name="step" value="<!-- TMPL_VAR NAME="step" -->">
@@ -236,7 +236,7 @@
 <form name="form" action="/cgi-bin/koha/members/memberentry.pl" method="post">
 		<!-- 		field always hidden in different form (1,2,3) -->
 		<input type="hidden" name="BorrowerMandatoryfield" value="<!--TMPL_VAR NAME="BorrowerMandatoryfield"-->">
-		<input type="hidden" name="FormFieldList" value="">
+		<input type="hidden" name="FormFieldList" value="cardnumber|streetnumber|streettype|address|address2|zipcode|city|contactname|phone|phonepro|mobile|email|emailpro|B_zipcode|B_phone|B_address|B_city|relationship|fax|contactnotes">
 		<input type="hidden" name="category_type" value="<!-- TMPL_VAR name="category_type" -->">
 		<input type="hidden" name="type" value="borrowers">
 		<input type="hidden" name="step" value="<!-- TMPL_VAR NAME="step" -->">
@@ -323,7 +323,7 @@
 			<input type="text" name="address" size="34" value="<!-- TMPL_VAR NAME="address" -->">
 		</p>
 		<p>
-			<!-- TMPL_IF NAME="mandatoryaddress2s" -->
+			<!-- TMPL_IF NAME="mandatoryaddress2" -->
 				<label class="borrowers_mandafield">
 			<!-- TMPL_ELSE -->
 				<label>
@@ -498,7 +498,7 @@
 	<form name="form" action="/cgi-bin/koha/members/memberentry.pl" method="post">
 		<!-- 		field always hidden in different form (1,2,3) -->
 		<input type="hidden" name="BorrowerMandatoryfield" value="<!--TMPL_VAR NAME="BorrowerMandatoryfield"-->">
-		<input type="hidden" name="FormFieldList" value="">
+		<input type="hidden" name="FormFieldList" value="cardnumber|dateenrolled|dateexpiry|opacnote|borrowernotes|userid|password">
 		<input type="hidden" name="category_type" value="<!-- TMPL_VAR name="category_type" -->">
 		<input type="hidden" name="type" value="borrowers">
 		<input type="hidden" name="step" value="<!-- TMPL_VAR NAME="step" -->">
